discussion/kv_engine/157396/157396_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47055: maybe fixed

needs more tests

Change-Id: Ibfebd628667b14d425f1db37aa517e96fe93b3d3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-13 08:33:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-13 08:58:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37626/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0041/0096]: test dcp consumer takeover...(66 ms) OK


99% tests passed, 1 tests failed out of 401

Total Test time (real) = 310.55 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37626/ )

Timeout of a CTest test 401/401 Test #269: ep_testsuite_dcp.full_eviction.comp_active ....................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37626/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10493/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush_accounting.cc:207:9: error: use of undeclared identifier "EP_LOG_CRITICAL" [clang-diagnostic-error]
        EP_LOG_CRITICAL("cid:{} seqno:{}", cid.value(), seqno);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10493/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/flush_accounting.cc:207:9:
error: use of undeclared identifier "EP_LOG_CRITICAL" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10493/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32093/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/flush_accounting.cc:207:9:
error: use of undeclared identifier "EP_LOG_CRITICAL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12069/ : FAILURE

Compile error at [2021-07-13T08:36:51.640Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/collections/flush_accounting.cc:207:9:
error: ?EP_LOG_CRITICAL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12069/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12574/ : FAILURE

ThreadSanitizer issue: SEGV ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:1153 in KVBucketParamTest_unlockKeyTempDeletedTest_Test::TestBody()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9133/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/104/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11156/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12234/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20125/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
